Fix blurry pieces
I should make a list of things that can cause blurry pieces...

--- a/ui/analyse/css/_round-underboard.scss
+++ b/ui/analyse/css/_round-underboard.scss
@@ -152,6 +152,7 @@ $col2-panel-height: 240px;
   width: 100%;
   height: var(--panel-height);
   overflow: hidden;
+  will-change: transform;
 }
 
 #acpl-chart-container-loader {
